[package]
name = "woodpecker-pat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
hmac = "0.12.1"
jwt = "0.16.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
sha2 = "0.10.8"
